feat(theme, resume): add language translation to the components

--- a/src/portfolio-web/public/i18n/en.json
+++ b/src/portfolio-web/public/i18n/en.json
@@ -1,6 +1,15 @@
 {
   "app": {
     "title": "Luis's Portfolio",
-    "hello": "Hi there! 👋🏻"
+    "hello": "Hi there! 👋🏻",
+    "shared": {
+      "download-resume-button": "Download Resume",
+      "theme": {
+        "light": "Light",
+        "hc-light": "Light High Contrast",
+        "dark": "Dark",
+        "hc-dark": "Dark High Contrast"
+      }
+    }
   }
 }
