feat(i18n, routing): add TranslateTitleStrategy to update route titles based on active language and route and support for both eagerly and lazy loaded components.

--- a/src/portfolio-web/public/i18n/es.json
+++ b/src/portfolio-web/public/i18n/es.json
@@ -1,7 +1,9 @@
 {
   "app": {
+
     "title": "El Portafolio de Luis",
     "hello": "¡Hola! 👋🏻",
+
     "shared": {
       "download-resume-button": "Descargar CV",
       "theme": {
@@ -10,6 +12,14 @@
         "dark": "Oscuro",
         "hc-dark": "Oscuro de Alto Contraste"
       }
+    },
+
+    "route": {
+      "home": "Inicio",
+      "projects": "Proyectos",
+      "blog": "Blog",
+      "docs": "Documentación"
     }
+
   }
 }
