--- a/src/portfolio-web/public/i18n/en.json
+++ b/src/portfolio-web/public/i18n/en.json
@@ -1,7 +1,9 @@
 {
   "app": {
+
     "title": "Luis's Portfolio",
     "hello": "Hi there! 👋🏻",
+
     "shared": {
       "download-resume-button": "Download Resume",
       "theme": {
@@ -10,6 +12,14 @@
         "dark": "Dark",
         "hc-dark": "Dark High Contrast"
       }
+    },
+
+    "route": {
+      "home": "Home",
+      "projects": "Projects",
+      "blog": "Blog",
+      "docs": "Docs"
     }
+
   }
 }
